Resolve #7: Add statrs

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -122,6 +122,9 @@
 - name: scirust
   topics: ["scientific-computing"]
 
+- name: statrs
+  topics: ["scientific-computing"]
+
 - name: tensorflow
   topics: ["neural-networks", "bindings"]
 
