--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -49,6 +49,9 @@
 - name: darwin-rs
   topics: ["evolution"]
 
+- name: densearray
+  topics: ["data-structures"]
+
 - name: evo
   topics: ["evolution"]
 
