Add crate: roulette-wheel (#11)

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -118,6 +118,9 @@
 - name: rds
   topics: ["data-structures"]
 
+- name: roulette-wheel
+  topics: ["data-structures"]
+
 - name: rsgenetic
   topics: ["metaheuristics"]
 
