Add crate: prophet (resolves #12)

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -121,6 +121,9 @@
 - name: petgraph
   topics: ["data-structures"]
 
+- name: prophet
+  topics: ["neural-networks"]
+
 - name: rds
   topics: ["data-structures"]
 
