Add crate: bvh (resolve #16)

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -20,6 +20,9 @@
 - name: blas
   topics: ["scientific-computing", "gpu-computing"]
 
+- name: bvh
+  topics: ["data-structures"]
+
 - name: cgmath
   topics: ["scientific-computing"]
 
