--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,13 @@ url: "http://arewelearningyet.com"
 # Build settings
 markdown: kramdown
 
+exclude:
+  - README.md
+  - _tmp
+  - Gemfile
+  - LICENSE
+  - vendor
+
 collections:
   topics:
     output: true
