Add neuroflow crate
Resolve: #20

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -103,6 +103,9 @@
 - name: ndarray-linalg
   topics: ["scientific-computing"]
 
+- name: neuroflow
+  topics: ["neural-networks"]
+
 - name: nn
   topics: ["neural-networks"]
 
