--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -61,6 +61,9 @@
 - name: darwin-rs
   topics: ["metaheuristics"]
 
+- name: datafusion
+  topics: ["data-preprocessing"]
+
 - name: densearray
   topics: ["data-structures"]
 
