--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -51,6 +51,9 @@
 - name: cudnn
   topics: ["gpu-computing"]
 
+- name: cumath
+  topics: ["gpu-computing"]
+
 - name: cuticula
   topics: ["data-preprocessing"]
 
