Add crate: faiss

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -76,6 +76,9 @@
 - name: euclid
   topics: ["scientific-computing"]
 
+- name: faiss
+  topics: ["clustering", "data-structures"]
+
 - name: fann
   topics: ["neural-networks"]
 
