--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -11,6 +11,9 @@
 - name: alumina
   topics: ["neural-networks"]
 
+- name: arff
+  topics: ["data-preprocessing"]
+
 - name: arrayfire
   topics: ["gpu-computing"]
 
@@ -66,6 +69,9 @@
 
 - name: datafusion
   topics: ["data-preprocessing"]
+
+- name: forester
+  topics: ["decision-trees"]
 
 - name: densearray
   topics: ["data-structures"]
@@ -135,6 +141,9 @@
 
 - name: ocl
   topics: ["gpu-computing"]
+
+- name: openml
+  topics: ["data-preprocessing"]
 
 - name: parenchyma
   topics: ["scientific-computing", "gpu-computing"]
