--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -123,6 +123,9 @@
 
 - name: ndarray-linalg
   topics: ["scientific-computing"]
+  
+- name: ndarray-stats
+  topics: ["scientific-computing"]
 
 - name: neuroflow
   topics: ["neural-networks"]
