Add argmin crate

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -13,6 +13,9 @@
 
 - name: arff
   topics: ["data-preprocessing"]
+  
+- name: argmin
+  topics: ["scientific-computing", "metaheuristics"]
 
 - name: arrayfire
   topics: ["gpu-computing"]
