Add crate: Peroxide
Want to add the crate - Peroxide to scientific-computing

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -154,6 +154,9 @@
 - name: parenchyma
   topics: ["scientific-computing", "gpu-computing"]
 
+- name: peroxide
+  topics: ["scientific-computing"]
+
 - name: petgraph
   topics: ["data-structures"]
 
