added em crate for scientific, GPU computing

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -78,6 +78,9 @@
 
 - name: densearray
   topics: ["data-structures"]
+  
+- name: em
+  topics: ["scientific-computing", "gpu-computing"]
 
 - name: evo
   topics: ["metaheuristics"]
