add blasoxide to crates.yaml

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -26,6 +26,9 @@
 - name: blas
   topics: ["scientific-computing", "gpu-computing"]
 
+- name: blasoxide
+  topics: ["scientific-computing"]
+
 - name: bvh
   topics: ["data-structures"]
 
