--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -233,6 +233,9 @@
 - name: timely
   topics: ["data-preprocessing"]
   
+- name: tflite
+  topics: ["neural-networks", "bindings"]
+
 - name: tvm
   topics: ["neural-networks", "bindings"]
 
