--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -13,7 +13,7 @@
 
 - name: arff
   topics: ["data-preprocessing"]
-  
+
 - name: argmin
   topics: ["scientific-computing", "metaheuristics"]
 
@@ -81,7 +81,7 @@
 
 - name: densearray
   topics: ["data-structures"]
-  
+
 - name: em
   topics: ["scientific-computing", "gpu-computing"]
 
@@ -132,7 +132,7 @@
 
 - name: ndarray-linalg
   topics: ["scientific-computing"]
-  
+
 - name: ndarray-stats
   topics: ["scientific-computing"]
 
@@ -227,12 +227,15 @@
 - name: tch
   topics: ["neural-networks", "bindings"]
 
+- name: tokenizers
+  topics: ["data-preprocessing"]
+
 - name: tensorflow
   topics: ["neural-networks", "bindings"]
 
 - name: timely
   topics: ["data-preprocessing"]
-  
+
 - name: tvm
   topics: ["neural-networks", "bindings"]
 
@@ -242,7 +245,7 @@
 
 - name: vulkano
   topics: ["gpu-computing"]
-  
+
 - name: xgboost
   topics: ["decision-trees"]
   description: "Rust bindings for the XGBoost gradient boosted trees library."
