--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -82,8 +82,11 @@
 - name: densearray
   topics: ["data-structures"]
   
-- name: em
-  topics: ["scientific-computing", "gpu-computing"]
+- name: emu_core
+  repository: https://github.com/calebwin/em
+  description: "A low-level modular, extensible GPGPU compute library with cross-platform support"
+  documentation: https://calebwin.github.io/eant2/emu
+  topics: ["gpu-computing", "scientific-computing"]
 
 - name: evo
   topics: ["metaheuristics"]
