--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -157,6 +157,9 @@
 - name: openml
   topics: ["data-preprocessing"]
 
+- name: oxigen
+  topics: ["metaheuristics"]
+
 - name: parenchyma
   topics: ["scientific-computing", "gpu-computing"]
 
