Added cogent library

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -41,6 +41,9 @@
 - name: coaster
   topics: ["scientific-computing", "gpu-computing"]
 
+- name: cogent
+  topics: ["neural-networks"]
+
 - name: cogset
   topics: ["clustering"]
 
