--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -154,6 +154,9 @@
 
 - name: metaheuristics
   topics: ["metaheuristics"]
+  
+  - name: mop
+  topics: ["metaheuristics", "scientific-computing"]
 
 - name: nalgebra
   topics: ["scientific-computing"]
@@ -166,6 +169,9 @@
 
 - name: ndarray-stats
   topics: ["scientific-computing"]
+
+- name: ndsparse
+  topics: ["data-structures"]
 
 - name: neuroflow
   topics: ["neural-networks"]
