Add crate autograph
Found on r/rust: https://www.reddit.com/r/rust/comments/hh6fcs/announcing_autograph_a_machine_learning_library/

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -26,6 +26,9 @@
 - name: autograd
   topics: ["neural-networks"]
 
+- name: autograph
+  topics: ["neural-networks"]
+
 - name: bio
   topics: ["scientific-computing", "data-structures"]
 
