--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -351,3 +351,8 @@
   license: MIT
   topics: ["data-preprocessing"]
 
+
+- repository: https://github.com/outbrain/fwumious_wabbit
+  description: "Fast logistic regression and field-aware factorization machines in Rust"
+  license: BSD
+  topics: ["neural-networks", "linear-classifiers"]
