Add crate: kmedoids
Please add crate to category: Clustering

--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -152,6 +152,9 @@
 - name: kmeans-colors
   topics: ["clustering","scientific-computing"]
 
+- name: kmedoids
+  topics: ["clustering"]
+
 - name: lapack
   topics: ["scientific-computing"]
 
