--- a/_data/crates.yaml
+++ b/_data/crates.yaml
@@ -179,6 +179,9 @@
 - name: ndarray
   topics: ["data-structures"]
 
+- name: ndarray-glm
+  topics: ["scientific-computing"]
+
 - name: ndarray-linalg
   topics: ["scientific-computing"]
 
